--- a/src/gui/GuiMisPublicaciones.form
+++ b/src/gui/GuiMisPublicaciones.form
@@ -366,7 +366,7 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Ver todas las publicaciones"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Por defecto"/>
+              <Color id="Cursor de Mano"/>
             </Property>
             <Property name="focusPainted" type="boolean" value="false"/>
             <Property name="focusable" type="boolean" value="false"/>
@@ -416,7 +416,7 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Filtrar"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor Por defecto"/>
+          <Color id="Cursor de Mano"/>
         </Property>
         <Property name="focusPainted" type="boolean" value="false"/>
         <Property name="focusable" type="boolean" value="false"/>
